# MandelbrotCL

./: .gitignore  CLUtils.cpp  CLUtils.hpp  CMakeLists.txt  GLMain.cpp  GLMain.hpp  LICENSE  OCLRenderer.cpp  OCLRenderer.hpp  README.md  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.hpp  main.cpp
kernels/: default.cl  default_double.cl
shader/: defaultFs.glsl  defaultVs.glsl
